# explot

./: .gitignore  CLAUDE.md  README.md  RISKS.md  ROADMAP.md  STATUS.md  _smoke_input.csv  pyproject.toml
config/: default.yaml  fast.yaml
docs/: demo_sleep_health.md  index.html
docs/reports/: breast_cancer_fast_report.html  sample_m5_fast_report.html  sleep_health_fast_report.html  train_fast_report.html
explot/: __init__.py  __main__.py  cache.py  cli.py  config.py  export.py  hooks.py  loader.py  orchestrator.py  state.py
explot/models/: __init__.py  dvae.py
explot/report/: generator.py
explot/stages/: base.py  manifest.yaml
explot/stages/autoencoder/: stage.md  stage.py
explot/stages/dimensionality/: stage.md  stage.py
explot/stages/exploration/: stage.md  stage.py
explot/stages/findings/: stage.md  stage.py
explot/stages/profiling/: stage.md  stage.py
explot/stages/supervised/: stage.md  stage.py
explot/stages/unsupervised/: stage.md  stage.py
simulator/: __init__.py  base.py  generate_all.py  proteomics.py  scrna.py  tabular.py
tests/: conftest.py  test_export.py  test_loader.py  test_orchestrator.py  test_report.py
tests/test_simulators/: test_tabular.py
tests/test_stages/: test_autoencoder.py  test_dimensionality.py  test_exploration.py  test_findings.py  test_profiling.py  test_supervised.py  test_unsupervised.py
